<resources>
    <string name="ip">68.59.162.183</string>
    <string name="app_name">Grouple</string>
    <string name="currentUser"></string>
    <string name="loginTextView">Login</string>
    <string name="registerTextView">Register</string>
    <string name="homeTextView">Grouple</string>
    <string name="inviteMembersMessage">Click on the name or the \'✓\' of friends you want to add. Tap to toggle their role [U]ser, [P]romoter, [A]dmin.</string>
    <string name="userTextView">User Profile</string>
    <string name="groupsTextView">Groups</string>
    <string name="emailEditText">Enter email</string>
    <string name="title_activity_event_addgroups">Add Groups</string>
    <string name="passwordEditText">Enter password</string>
    <string name="rePasswordEditText">Re-Enter Password</string>
    <string name="fNameEditText">Enter First Name</string>
    <string name="lNameEditText">Enter Last Name</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Grouple Home</string>
    <string name="eventsTextView">Events</string>
    <string name="eventsButton">Events</string>
    <string name="groupsButton">Groups</string>
    <string name="profileButton">Profile</string>
    <string name="messagesButton">Messages</string>
    <string name="friendsButton">Friends</string>
    <string name="settingsButton">Settings</string>
    <string name="backButton">Back</string>
    <string name="logoutButton">Logout</string>
    <string name="createGroupButton">Create Group</string>
    <string name="yourGroupsButton">My Groups</string>
    <string name="pendingGroupsButton">Group Invites</string>
    <string name="createEventButton">Create Event</string>
    <string name="unconfirmedEventsButton">Unconfirmed Events</string>
    <string name="upcomingEventsButton">Upcoming Events</string>
    <string name="pastEventsButton">Past Events</string>
    <string name="userButton">User</string>
    <string name="noFriendRequestsTextView">No friend requests to display!</string>
    <string name="homeButton">Home</string>
    <string name="title_activity_user">User Profile</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_register">Register</string>
    <string name="loginFailString">Incorrect Email or Password!</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="title_activity_current_friends">Friends</string>
    <string name="title_activity_friend_requests">Friend Requests</string>
    <string name="title_activity_resources">Resources</string>
    <string name="title_activity_global">Global</string>
    <string name="editProfilePhotoButton">Edit Photo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_messages">Messages</string>
    <string name="gregarious_about">This is a real party animal. User\'s with this badge generally attend a lot of social outings where they can cherish great times with friends.</string>
     <string name="gregarious_hint">This is a real party animal. User\'s with this badge generally attend a lot of social outings where they can cherish great times with friends.</string>
    <string name="congregator_about">Active user who pushes themselves to achieve more physically.</string>
     <string name="congregator_hint">Active user who pushes themselves to achieve more physically.</string>
    <string name="amused_about">Whether it be in school or the workplace, this badge is for the overachiever who goes to great lengths to succeed as a team.</string>
     <string name="amused_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="merrymaker_about">This badge is for the user who loves getting out there and experiencing quality entertainment.</string>
     <string name="merrymaker_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="diligent_about">This badge is for someone who goes to great lengths to provide for the events they attend. Bringing items from the item checklist can earn you this badge.</string>
     <string name="diligent_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="productive_about">The finder of amusement, attend a lot of entertainment events to earn this prestigious badge.</string>
     <string name="productive_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="agile_about">This is a real party animal. User\'s with this badge tend to attend a lot of social outings where they can cherish great times with friends.</string>
     <string name="agile_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="healthnut_about">Active user who pushes themselves to achieve more physically.</string>
     <string name="healthnut_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="outdoorsman_about">Active user who pushes themselves to achieve more physically.</string>
     <string name="outdoorsman_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="environmentalist_about">For the explorer of nature. This badge is not for your typical city dweller, one must go out in the environment and take in the great outdoors to earn this badge.</string>
     <string name="environmentalist_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="extrovert_about">This badge is for the user who loves getting out there and experiencing quality entertainment.</string>
     <string name="extrovert_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="regular_about">This badge is for someone who goes to great lengths to provide for the events they attend. Bringing items from the item checklist can earn you this badge.</string>
     <string name="regular_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="routinist_about">The finder of amusement, attend a lot of entertainment events to earn this prestigious badge.</string>
     <string name="routinist_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="active_about">For the explorer of nature. This badge is not for your typical city dweller, one must go out in the environment and take in the great outdoors to earn this badge.</string>
     <string name="active_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="wellrounded_about">For the explorer of nature. This badge is not for your typical city dweller, one must go out in the environment and take in the great outdoors to earn this badge.</string>
     <string name="wellrounded_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="reachingout_about">For the explorer of nature. This badge is not for your typical city dweller, one must go out in the environment and take in the great outdoors to earn this badge.</string>
     <string name="reachingout_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="mingler_about">For the explorer of nature. This badge is not for your typical city dweller, one must go out in the environment and take in the great outdoors to earn this badge.</string>
     <string name="mingler_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="perseverance_about">For the explorer of nature. This badge is not for your typical city dweller, one must go out in the environment and take in the great outdoors to earn this badge.</string>
     <string name="perseverance_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="helpinghand_about">For the explorer of nature. This badge is not for your typical city dweller, one must go out in the environment and take in the great outdoors to earn this badge.</string>
     <string name="helpinghand_hint">To unlock this badge, get together with some friends and enjoy some good quality entertainment.</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_friend_profile">FriendProfileActivity</string>
    <string name="AddGroup">Add to Group</string>
    <string name="Confirm">Create this Group</string>
    <string name="isAdmin">Give person Admin privileges</string>
    <string name="groupNameMessage">Give your group a name</string>
    <string name="bioMessage">About Group</string>
    <string name="groupBioMessage">Tell people a little about this group</string>
    <string name="confirm">Confirm Create Group</string>
    <string name="introMessage2">Current Members</string>
    <string name="title_activity_event_create">EventCreateActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_group_members">GroupMembersActivity</string>
    <string name="title_activity_group_edit">GroupEditActivity</string>
    <string-array name="categorySpinner">
        <item>Food and Entertainment</item>
        <item>Sports and Games</item>
        <item>Travel and Leisure</item>
        <item>Getting Fucked Up</item>
    </string-array>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="title_activity_event_add_groups">EventAddGroupsActivity</string>
    <string name="title_activity_event_edit">EventEditActivity</string>
    <string name="title_activity_manage_members">ManageMembersActivity</string>
    <string name="title_activity_manage_attending_event">ManageAttendingEvent</string>
    <string name="title_activity_contact_list">ContactList</string>
    <string name="title_activity_group_messages">GroupMessagesActivity</string>
    <string name="title_activity_event_messaging">EventMessagingActivity</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>