<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="5dp" >

    <EditText
        android:id="@+id/emailEditTextRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:background="@drawable/border"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        		android:fontFamily="sans-serif"
        
        		                android:textColorHint="@color/hint_text_color"
		android:textColor="@color/text_color"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/emailEditText"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginButtonRA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
		android:background="@drawable/button_border"
		android:fontFamily="sans-serif-condensed"
		android:textColor="@color/button_text_color"

        android:onClick="loginButton"
        android:text="@string/loginButton"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passwordEditTextRA"
                android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailEditTextRA"
        android:layout_marginBottom="3dp"
                android:textColorHint="@color/hint_text_color"
        android:layout_alignRight="@+id/emailEditTextRA"
        		android:fontFamily="sans-serif"
        	
		android:textColor="@color/text_color"
        android:layout_below="@+id/emailEditTextRA"
        android:ems="10"
        android:hint="@string/passwordEditText"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/rePasswordEditTextRA"
                android:textColorHint="@color/hint_text_color"
                        android:background="@drawable/border"
                                android:layout_marginBottom="3dp"
                		android:fontFamily="sans-serif"
                		
		android:textColor="@color/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordEditTextRA"
        android:layout_alignRight="@+id/passwordEditTextRA"
        android:layout_below="@+id/passwordEditTextRA"
        android:ems="10"
        android:hint="@string/rePasswordEditText"
        android:inputType="textPassword" />

    <EditText
       
        android:id="@+id/fNameEditText"
                android:background="@drawable/border"
                android:textColorHint="@color/hint_text_color"
                android:textColor="@color/text_color"
        android:layout_width="match_parent"
                android:layout_marginBottom="3dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rePasswordEditTextRA"
        android:layout_below="@+id/rePasswordEditTextRA"
        android:ems="10"
        android:hint="@string/fNameEditText"
		android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/lNameEditText"
                android:textColorHint="@color/hint_text_color"
                android:textColor="@color/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="@drawable/border"
        android:layout_alignLeft="@+id/fNameEditText"
        android:layout_below="@+id/fNameEditText"
        		android:fontFamily="sans-serif"
        android:ems="10"
        android:hint="@string/lNameEditText"
		android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/noFriendRequestsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        		android:fontFamily="sans-serif-condensed"
		android:textColor="@color/text_color"
        android:layout_above="@+id/loginButtonRA"
        android:layout_centerHorizontal="true"
        android:text="Already have a Grouple account?"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/registerButtonRA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
                android:layout_marginBottom="5dp"
        		android:fontFamily="sans-serif-condensed"
		android:textColor="@color/button_text_color"
		android:background="@drawable/button_border"
        android:layout_alignLeft="@+id/lNameEditText"
        android:layout_below="@+id/lNameEditText"
        android:onClick="registerButton"
        android:textSize="20sp"
        android:text="@string/registerButton" />

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        		android:fontFamily="sans-serif-condensed"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerButtonRA"
        android:layout_centerHorizontal="true"
        android:text="Passwords must match!"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignLeft="@+id/noFriendRequestsTextView"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/registerTextView"
        android:textColor="@color/text_color"
        android:textSize="50sp" />

</RelativeLayout>
