<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventCreateLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/background_color"
    android:orientation="vertical" >
    
    <ScrollView
        android:id="@+id/scrollViewEntire"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
    	 android:background="@color/background_color"
        android:padding="0dp" >

         
    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:background="@color/background_color"
        android:orientation="vertical" >
    
         <TextView
        android:id="@+id/loginTextViewLA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:text="@string/loginTextView"
        android:textColor="@color/header_text_color"
        android:textStyle="bold"
        android:textSize="50sp" />
        
        <EditText 
        android:id="@+id/emailEditTextLA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
       	android:layout_marginBottom="5dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/emailEditText"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_text_color" >
 	<requestFocus/></EditText>

    <EditText
        android:id="@+id/passwordEditTextLA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border"
        android:layout_gravity="center"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/passwordEditText"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_text_color" />
         
        <TextView
        android:id="@+id/loginFailTextViewLA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/loginFailString"
        android:textColor="@color/red"/>
    
        
		  <CheckBox
        android:id="@+id/rememberLoginCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
     	android:layout_marginBottom="5dp"
     	android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Keep Me Logged In" />
    
    <Button
        android:id="@+id/loginButtonLA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:fontFamily="sans-serif-condensed"
        android:onClick="loginButton"
        android:layout_gravity="center"
        android:text="@string/loginButton"
        android:textColor="@color/button_text_color" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />	
    
    
   
     <TextView
        android:id="@+id/addFriendMessageTextViewAFA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/text_color"
     	android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_centerHorizontal="true"
        android:text="Don&apos;t have a Grouple account?"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    
    <Button
        android:id="@+id/registerButtonLA"
        android:layout_width="wrap_content"
        android:background="@drawable/button_border"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
	   	android:textColor="@color/button_text_color"
        android:onClick="startRegisterActivity"
        android:text="@string/registerButton" />

   

   
    


    
	    
	    </LinearLayout>
	</ScrollView>

 </LinearLayout>
